Preventing modal from overflowing

--- a/web/src/components/modals/ModalContainer/ModalContainer.module.css
+++ b/web/src/components/modals/ModalContainer/ModalContainer.module.css
@@ -23,6 +23,8 @@
   min-width: 310px;
   position: relative;
   width: min(100%, 500px);
+  max-height: 428px;
+  overflow-y: scroll;
 }
 
 .modal__author-bar {
